<resources>
    <string name="app_name">RestaurantGenerator</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--    Cover page -->
    <string name="main_name">MONCHIES</string>
    <string name="main_find_a_place">Find A Place To Eat</string>

    <!--    Nearby Restaurants Page -->
    <string name="nearby_goBackBtn">Go Back</string>
    <string name="nearby_readyBtn">Ready</string>

    <!--    User Picks page -->
    <string name="userpicks_gobackBtn">Go Back</string>
    <string name="userpicks_randomizeBtn">Randomize</string>

    <!--    Nearby Restaurants Custom Adapter -->
    <string name="nearby_adapter_add">Add To List</string>
    <string name="nearby_adapter_plus">+</string>

    <!--   User Picks Custom Adapter -->
    <string name="userpicks_adapter_delete">Delete From List</string>
    <string name="userpicks_adapter_remove">-</string>

    <!--    Alert Dialog XML -->
    <string name="alert_button_1">5 Miles</string>
    <string name="alert_button_2">10 Miles</string>
    <string name="alert_button_3">15 Miles</string>
    <string name="alert_button_custom">Custom</string>
    <string name="alert_textView">Choose Your Distance</string>
    <string name="alert_editText">Enter a distance (in miles)</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>