<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/alert_textView"
            android:textColor="@color/colorComplimenttwo"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/colorComplimenttwo"
            android:text="@string/alert_button_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/button1"
            android:backgroundTint="@color/colorComplimenttwo"
            android:text="@string/alert_button_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/button2"
            android:backgroundTint="@color/colorComplimenttwo"
            android:text="@string/alert_button_3" />

        <Button
            android:id="@+id/buttonCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/colorComplimenttwo"
            android:text="@string/alert_button_custom" />

        <EditText
            android:id="@+id/edittext_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/alert_editText"
            android:layout_toRightOf="@+id/buttonCustom"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="150dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


